<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="area.guias.pfc.LoginActivity" >
 
      <item
            android:id="@+id/language"
            app:showAsAction="always"
            android:icon="@drawable/language"
            android:title="@string/seleccionar_idioma">
        
            <menu>
                   <item android:id="@+id/spanish"
                         android:title="@string/spanish" />
                   
                   <item android:id="@+id/english"
                         android:title="@string/english" />
                   
                   <item android:id="@+id/galician"
                         android:title="@string/galician" />
            </menu> 
            
      </item>
 
      <item
            android:id="@+id/back"
            app:showAsAction="always"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/atras"/>

</menu>
