<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="area.guias.pfc.MainActivity" >
 
      <item
            android:id="@+id/menu_language"
            app:showAsAction="always"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/seleccionar_idioma">
        
            <menu>
                   <item android:id="@+id/espanol"
                         android:title="@string/espanol" />
                   
                   <item android:id="@+id/english"
                         android:title="@string/english" />
            </menu> 
            
      </item>
 
      <item
            android:id="@+id/menu_revert"
            app:showAsAction="always"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/atras"/>

</menu>
