<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="area.guias.pfc.TripsView" >
    
    <item 
        android:id="@+id/trips_view_user_revert"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/atras">
    </item>
    
    <item android:id="@+id/system_trips"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_select_all"
        android:title="@string/system_trips">
    </item>

    <item
        android:id="@+id/search_user_trips"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_trips"/>
    
    <item android:id="@+id/delete_trips"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/remove_trips">
    </item>
    
</menu>
