<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="area.guias.pfc.EducationalSettingView" >
    
    <item 
        android:id="@+id/view_mode"
        app:showAsAction="never"
        android:title="@string/view_mode">
    </item>
    
    <item 
        android:id="@+id/save"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save">
    </item>
    
    <item 
        android:id="@+id/revert"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/atras">
    </item>   
    
</menu>
