<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".WelcomeActivity" >

    <ImageView 
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/icono"
        android:contentDescription="@string/image"/>
            
    <ScrollView
        android:id="@+id/scrollView_tab1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView" 
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/white_box">
    
        <RelativeLayout
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:layout_gravity="center_vertical"
    		android:background="@null">
           
    		<Button
        		android:id="@+id/log_in"
        		android:layout_width="match_parent"
        		android:layout_height="100dp"
        		android:layout_margin="5dp"
        		android:background="@drawable/blue_button_list_selector"
        		android:onClick="log_in"
        		android:gravity="center"
        		android:text="@string/log_in"
        		android:textSize="25sp"
        		android:textColor="@color/white_eduarea"/>

    		<Button
        		android:id="@+id/sign_in"
        		android:layout_width="match_parent"
        		android:layout_height="100dp"
        		android:layout_margin="5dp"
        		android:layout_below="@+id/log_in"
        		android:background="@drawable/blue_button_list_selector"
        		android:onClick="sign_in"
        		android:gravity="center"
        		android:text="@string/sign_in"
        		android:textSize="25sp"
        		android:textColor="@color/white_eduarea"/>
    		
    		</RelativeLayout>

     </ScrollView>
     
    
    
	</RelativeLayout>
